--- a/coffee-house/src/sass/layout/_footer.scss
+++ b/coffee-house/src/sass/layout/_footer.scss
@@ -77,12 +77,7 @@
 
     color: $color-text-light;
 
-    &::before {
-        @extend %hover-link-footer;
-    }
-    &:hover::before {
-        @extend %before-hover-link-footer;
-    }
+    @include hover-link-footer();
 }
 .footer__social-icon {
     cursor: pointer;
