--- a/coffee-house/src/sass/components/_navigation.scss
+++ b/coffee-house/src/sass/components/_navigation.scss
@@ -13,13 +13,7 @@
     display: block;
 
     position: relative;
-
-    &::before {
-        @extend %hover-link;
-    }
-    &:hover::before {
-        @extend %before-hover-link;
-    }
+    @include hover-link-header;
 }
 
 .navigation__link a {
