--- a/coffee-house/src/sass/components/_burger-menu.scss
+++ b/coffee-house/src/sass/components/_burger-menu.scss
@@ -21,4 +21,14 @@
     height: 2px;
     background-color: $color-border-dark;
     border-radius: 100px;
+
+    transition: 1s;
+}
+
+.burger-menu__first-span {
+    transform: translateY(200%) rotate(45deg);
+}
+
+.burger-menu__second-span {
+    transform: translateY(-200%) rotate(-45deg);
 }
