--- a/coffee-house/src/sass/components/_navigation.scss
+++ b/coffee-house/src/sass/components/_navigation.scss
@@ -7,6 +7,11 @@
     gap: 40px;
 
     list-style-type: none;
+
+    @include media-tablet {
+        flex-direction: column;
+        gap: 60px;
+    }
 }
 
 .navigation__link {
