--- a/coffee-house/src/sass/layout/_header.scss
+++ b/coffee-house/src/sass/layout/_header.scss
@@ -16,7 +16,31 @@
     align-self: stretch;
 
     @include media-tablet {
-        display: none;
+        position: fixed;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 100px;
+
+        top: 100px;
+        right: -100%;
+        width: 100%;
+        height: 100vh;
+        background-color: $color-background-body;
+
+        margin: 0;
+        padding: 60px 40px;
+
+        z-index: 1;
+
+        @include font($size: 3.2rem, $weight: 600, $line-height: 125%);
+
+        transition: 0.2s;
+    }
+}
+
+.header__links_hide {
+    @include media-tablet {
+        right: 0px;
     }
 }
 
