--- a/coffee-house/src/sass/layout/_wrapper.scss
+++ b/coffee-house/src/sass/layout/_wrapper.scss
@@ -3,6 +3,8 @@
     margin: auto;
     padding: 20px 40px;
 
+    overflow: hidden;
+
     @include media-mobilesmall {
         padding: 20px 16px 40px;
     }
