--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -1158,17 +1158,24 @@ template {
 }
 
 .carousel__container {
-  flex-grow: 1;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 300px;
+  left: 0px;
+  transition: 1s;
+}
+
+.carousel__wrapper {
+  width: 80%;
+  overflow: hidden;
 }
 
 .carousel__item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 480px;
 }
 
 .carousel__img {
