--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -1166,16 +1166,33 @@ template {
   left: 780px;
   transition: 1s;
 }
+@media (max-width: 700px) {
+  .carousel__container {
+    left: 0px;
+    gap: 0px;
+    justify-content: flex-start;
+  }
+}
 
 .carousel__wrapper {
-  width: 80%;
+  width: 85%;
   overflow: hidden;
+}
+@media (max-width: 700px) {
+  .carousel__wrapper {
+    width: 348px;
+  }
 }
 
 .carousel__item {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media (max-width: 700px) {
+  .carousel__item {
+    width: 348px;
+  }
 }
 
 .carousel__img {
@@ -1184,7 +1201,7 @@ template {
 }
 @media (max-width: 700px) {
   .carousel__img {
-    width: 100%;
+    width: auto;
   }
 }
 
