--- a/coffee-house/src/sass/components/_carousel.scss
+++ b/coffee-house/src/sass/components/_carousel.scss
@@ -18,15 +18,28 @@
     left: 780px;
 
     transition: 1s;
+
+    @media (max-width: 700px) {
+        left: 0px;
+        gap: 0px;
+        justify-content: flex-start;
+    }
 }
 .carousel__wrapper{
-    width: 80%;
+    width: 85%;
     overflow: hidden;
+
+    @media (max-width: 700px) {
+        width: 348px;
+    }
 }
 .carousel__item{
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media (max-width: 700px) {
+        width: 348px;
+    }
 }
 .carousel__img {
     display: block;
@@ -34,7 +47,7 @@
     margin-bottom: 20px;
 
     @include media-mobilesmall {
-        width: 100%;
+        width: auto;
     }
 }
 .carousel__describe {
