--- a/coffee-house/src/sass/components/_pagination.scss
+++ b/coffee-house/src/sass/components/_pagination.scss
@@ -28,5 +28,5 @@
     left: -40px; /* Начальное значение должно быть отрицательным */
     display: block;
     background-color: $color-border-dark;
-    transition: left 1s;
+    transition: 1s;
 }
