--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   font-family: "Inter", sans-serif;
 }
@@ -1246,25 +1245,20 @@ template {
 
 .pagination__stick {
   display: block;
+  position: relative;
+  overflow: hidden;
   width: 40px;
   height: 4px;
   border-radius: 100px;
   background-color: #C1B6AD;
 }
 
-.pagination__stick {
-  position: relative;
-  overflow: hidden;
-}
-
-.pagination__stick .pagination__indicator {
-  width: 40px;
-  height: 4px;
-  position: absolute;
-  left: -40px; /* Начальное значение должно быть отрицательным */
+.pagination__stick_active .pagination__indicator {
   display: block;
-  background-color: #665F55;
-  transition: 1s;
+  height: 100%;
+  width: 0;
+  background-color: #4CAF50;
+  transition: width 0.1s ease;
 }
 
 .burger-menu {
