--- a/coffee-house/src/sass/components/_pagination.scss
+++ b/coffee-house/src/sass/components/_pagination.scss
@@ -8,6 +8,9 @@
 .pagination__stick {
     display: block;
 
+    position: relative;
+    overflow: hidden;
+
     width: 40px;
     height: 4px;
 
@@ -16,17 +19,12 @@
     background-color: $color-border-light;
 }
 
-.pagination__stick {
-    position: relative;
-    overflow: hidden;
+
+.pagination__stick_active .pagination__indicator {
+    display: block;
+    height: 100%;
+    width: 0;
+    background-color: #4CAF50;
+    transition: width 0.1s ease;
 }
 
-.pagination__stick .pagination__indicator {
-    width: 40px;
-    height: 4px;
-    position: absolute;
-    left: -40px; /* Начальное значение должно быть отрицательным */
-    display: block;
-    background-color: $color-border-dark;
-    transition: 1s;
-}
