--- a/coffee-house/src/sass/components/_pagination.scss
+++ b/coffee-house/src/sass/components/_pagination.scss
@@ -25,6 +25,6 @@
     height: 100%;
     width: 0;
     background-color: #4CAF50;
-    transition: width 0.1s ease;
+    transition: width 1s;
 }
 
