--- a/coffee-house/src/sass/components/_pagination.scss
+++ b/coffee-house/src/sass/components/_pagination.scss
@@ -24,7 +24,7 @@
     display: block;
     height: 100%;
     width: 0;
-    background-color: #4CAF50;
-    transition: width 1s;
+    background-color: $color-border-dark;
+    transition: width 0.1s;
 }
 
