--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -1152,9 +1152,14 @@ template {
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 50px;
+}
+@media screen and (max-width: 700px) {
+  .carousel {
+    width: auto;
+  }
 }
 
 .carousel__container {
@@ -1162,37 +1167,20 @@ template {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 300px;
-  left: 780px;
+  left: 348px;
   transition: 1s;
-}
-@media (max-width: 700px) {
-  .carousel__container {
-    left: 0px;
-    gap: 0px;
-    justify-content: flex-start;
-  }
 }
 
 .carousel__wrapper {
-  width: 85%;
+  width: 348px;
   overflow: hidden;
-}
-@media (max-width: 700px) {
-  .carousel__wrapper {
-    width: 348px;
-  }
 }
 
 .carousel__item {
+  width: 348px;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-@media (max-width: 700px) {
-  .carousel__item {
-    width: 348px;
-  }
 }
 
 .carousel__img {
