--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -1283,4 +1283,36 @@ template {
   transform: translateY(-200%) rotate(-45deg);
 }
 
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(64, 63, 61, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.modal__window {
+  position: relative;
+  width: 40vw;
+  padding: 16px;
+  border-radius: 40px;
+  display: flex;
+  background-color: #E1D4C9;
+}
+@media screen and (max-width: 1500px) {
+  .modal__window {
+    width: 70vw;
+  }
+}
+@media (max-width: 768px) {
+  .modal__window {
+    width: 90vw;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
