--- a/coffee-house/src/sass/components/_modal.scss
+++ b/coffee-house/src/sass/components/_modal.scss
@@ -5,7 +5,6 @@
     width: 100%;
     height: 100%;
     background-color: $color-background-backdrop;
-    opacity: 0.8;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,9 +14,19 @@
 
 .modal__window {
     position: relative;
-    width: 800px;
+    width: 40vw;
     padding: 16px;
+    border-radius: 40px;
+
+    display: flex;
 
     background-color: $color-background-body;
-    opacity: 1;
+
+    @media screen and (max-width: 1500px) {
+        width: 70vw;
+    }
+
+    @include media-tablet {
+        width: 90vw;
+    }
 }
