--- a/coffee-house/src/sass/components/_modal.scss
+++ b/coffee-house/src/sass/components/_modal.scss
@@ -19,6 +19,7 @@
     border-radius: 40px;
 
     display: flex;
+    gap: 20px;
 
     background-color: $color-background-body;
 
@@ -29,4 +30,92 @@
     @include media-tablet {
         width: 90vw;
     }
+}
+
+.modal__item-img-wrapper {   
+    overflow: hidden;
+    border-radius: 40px;
+}
+.modal__item-img {
+    display: block;
+    border-radius: 40px;
+
+    width: 100%;
+    height: auto;
+
+    transition: 1s;
+
+    transform: scale(1.1);
+}
+
+.modal__main-information {
+    display: flex;
+    flex-direction: column;
+    gap: 12;
+    margin-bottom: 20px;
+}
+
+.modal__describe {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.modal__size-variables, .modal__additives-variables {
+    display: flex;
+    gap: 8px;
+    justify-content: flex-start;
+    align-items: center;
+}
+.modal__size-choise, .modal__additives-choise{
+    display: flex;
+    padding: 8px 16px 8px 8px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+
+    border: 1px solid $color-border-light;
+    border-radius: 100px;
+
+    transition: 1s;
+
+    cursor: pointer;
+}
+.modal__size-choise_active, .modal__additives-choise_active {
+    background-color: $color-background-container;
+    color: $color-text-light;
+}
+
+.modal__size-choise:hover, .modal__additives-choise:hover {
+    background-color: $color-background-container;
+    color: $color-text-light;
+}
+.modal__size-variable-scale, .modal__additives-variable-scale {
+    border-radius: 50%;
+    background-color: $color-border-light;
+    width: 30px;
+    height: 30px;
+    padding: 3px;
+    text-align: center;
+    color: $color-text-dark;
+}
+
+.modal__total{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+}
+.modal__adition-information{
+    display: flex;
+    gap: 8px;
+}
+.modal__info-empty{
+    display: block;
+    width: 30px;
+    height: 30px;
+}
+.modal__adition-information-text{
+    font-size: 10px;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
