--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -1078,6 +1078,10 @@ template {
   border-radius: 100px;
   border: 1px solid #665F55;
   cursor: pointer;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
   transition: 1s;
 }
 
@@ -1356,6 +1360,27 @@ template {
   margin-bottom: 20px;
 }
 
+.modal__name-item {
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125%;
+}
+
+.modal__about-item {
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.modal__size-name, .modal__additives-name {
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
 .modal__describe {
   display: flex;
   flex-direction: column;
@@ -1399,6 +1424,10 @@ template {
   padding: 3px;
   text-align: center;
   color: #403F3D;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
 }
 
 .modal__total {
@@ -1408,21 +1437,34 @@ template {
   gap: 8px;
 }
 
+.modal__total-name, .modal__total-price {
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125%;
+}
+
 .modal__adition-information {
   display: flex;
   gap: 8px;
+  border-top: 1px solid #C1B6AD;
 }
 
 .modal__info-empty {
   display: block;
   width: 30px;
   height: 30px;
+  margin-top: 12px;
 }
 
 .modal__adition-information-text {
   font-size: 10px;
   padding-top: 12px;
   padding-bottom: 12px;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%;
 }
 
 /*# sourceMappingURL=style.css.map */
