--- a/coffee-house/src/sass/components/_buttons.scss
+++ b/coffee-house/src/sass/components/_buttons.scss
@@ -20,6 +20,7 @@
     border: 1px solid $color-border-dark;
 
     cursor: pointer;
+    @include font($size: 1.6rem, $weight: 600, $line-height: 150%);
 
     transition: 1s;
 }
