--- a/coffee-house/src/sass/components/_modal.scss
+++ b/coffee-house/src/sass/components/_modal.scss
@@ -33,8 +33,7 @@
 }
 
 .modal__item-img-wrapper {   
-    overflow: hidden;
-    border-radius: 40px;
+    
 
     @media screen and (max-width: 700px) {
         display: none;
@@ -42,14 +41,11 @@
 }
 .modal__item-img {
     display: block;
-    border-radius: 40px;
-
-    width: 100%;
+    border-radius: 20px;
+    width: 340px;
     height: auto;
 
     transition: 1s;
-
-    transform: scale(1.1);
 }
 
 
