--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -1320,13 +1320,14 @@ template {
 }
 
 .modal__window {
-  position: relative;
+  position: fixed;
   width: 40vw;
   padding: 16px;
   border-radius: 40px;
   display: flex;
   gap: 20px;
   background-color: #E1D4C9;
+  z-index: 2;
 }
 @media screen and (max-width: 1500px) {
   .modal__window {
