--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -1402,6 +1402,7 @@ template {
   justify-content: center;
   align-items: center;
   gap: 8px;
+  background-color: none;
   border: 1px solid #C1B6AD;
   border-radius: 100px;
   transition: 1s;
