--- a/coffee-house/src/sass/components/_modal.scss
+++ b/coffee-house/src/sass/components/_modal.scss
@@ -86,6 +86,7 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
+    background-color: none;
 
     border: 1px solid $color-border-light;
     border-radius: 100px;
