--- a/coffee-house/src/sass/layout/_menu-section.scss
+++ b/coffee-house/src/sass/layout/_menu-section.scss
@@ -82,7 +82,7 @@
     color: $color-text-light;
 }
 
-.menu__coffee-category {
+.menu__coffee-category,  .menu__tea-category{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -105,6 +105,7 @@
     display: none;
     @include media-tablet {
         display: block;
+        margin: auto;
     }
 }
 .menu__item-img-wrapper {   
