--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -496,10 +496,11 @@ template {
 }
 
 .enjoy {
+  position: relative;
   max-width: 1360px;
   padding: 100px;
   border-radius: 40px;
-  background-image: url("../../assets/jpg/img-enjoy.jpg");
+  overflow: hidden;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
@@ -1482,6 +1483,22 @@ template {
   font-style: normal;
   font-weight: 600;
   line-height: 140%;
+}
+
+.video__background {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.5);
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border-radius: 40px;
+}
+@media screen and (max-width: 1230px) {
+  .video__background {
+    transform: translate(-50%, -50%) scale(3.5);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
