--- a/coffee-house/src/sass/layout/_enjoy.scss
+++ b/coffee-house/src/sass/layout/_enjoy.scss
@@ -1,11 +1,15 @@
 .enjoy {
+    position: relative;
+
     max-width: 1360px;
 
     padding: 100px;
 
     border-radius: 40px;
 
-    background-image: url('../../assets/jpg/img-enjoy.jpg');
+    overflow: hidden;
+
+    // background-image: url('../../assets/jpg/img-enjoy.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
