feat: add base render of keyboard

--- a/hangman/src/main.scss
+++ b/hangman/src/main.scss
@@ -2,5 +2,7 @@
 @import "sass/abstracts/variables";
 
 // layout
-@import "sass/layout/gallow";
 @import "sass/layout/main";
+
+// components
+@import "sass/components/gallow";
