feat: add good vision for keyboard

--- a/hangman/src/sass/layout/_main.scss
+++ b/hangman/src/sass/layout/_main.scss
@@ -1,4 +1,10 @@
 .main {
     margin: 0 auto;
     width: 1440px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    flex-wrap: wrap;
 }
