--- a/hangman/src/sass/layout/_main.scss
+++ b/hangman/src/sass/layout/_main.scss
@@ -1,10 +1,9 @@
 .main {
     margin: 0 auto;
-    width: 1440px;
+    max-width: 1440px;
 
     display: flex;
     justify-content: center;
     align-items: center;
-
     flex-wrap: wrap;
 }
