--- a/hangman/src/style.css
+++ b/hangman/src/style.css
@@ -1,6 +1,6 @@
 .main {
   margin: 0 auto;
-  width: 1440px;
+  max-width: 1440px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -72,7 +72,7 @@
   display: flex;
   flex-wrap: wrap;
   align-self: flex-start;
-  width: 500px;
+  width: 550px;
 }
 
 .keyboard__key {
