refactor: refact code prettier

--- a/hangman/src/main.scss
+++ b/hangman/src/main.scss
@@ -1,9 +1,9 @@
 // abstracts
-@import "sass/abstracts/variables";
+@import 'sass/abstracts/variables';
 
 // layout
-@import "sass/layout/main";
+@import 'sass/layout/main';
 
 // components
-@import "sass/components/gallow";
-@import "sass/components/keyboard";
+@import 'sass/components/gallow';
+@import 'sass/components/keyboard';
