--- a/hangman/src/sass/components/_gallow.scss
+++ b/hangman/src/sass/components/_gallow.scss
@@ -1,3 +1,11 @@
+.gallow {
+  grid-area: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+}
+
 .gallow__block {
   position: relative;
   background: url('../assets/svg/gallows.svg') center/contain no-repeat;
@@ -69,4 +77,10 @@
   background: url('../assets/svg/leg-two.svg') center/contain no-repeat;
   width: 33px;
   height: 40px;
+}
+
+@media screen and (max-width: 700px) {
+  .gallow__game-name {
+    order: -1;
+  }
 }
