--- a/hangman/src/sass/components/_keyboard.scss
+++ b/hangman/src/sass/components/_keyboard.scss
@@ -1,10 +1,16 @@
 .keyboard {
+  grid-area: right-bottom;
+
   display: flex;
   flex-wrap: wrap;
 
   align-self: flex-start;
 
-  width: 550px;
+  max-width: 550px;
+
+  @media screen and (max-width: 700px) {
+    order: 1;
+  }
 }
 
 .keyboard__key {
