--- a/hangman/src/sass/layout/_main.scss
+++ b/hangman/src/sass/layout/_main.scss
@@ -2,8 +2,17 @@
   margin: 0 auto;
   max-width: 1440px;
 
-  display: flex;
+  display: grid;
+  grid-template-areas: 'left right-top' 'left right-bottom';
+  grid-template-columns: 1fr 1fr;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+
+  @media screen and (max-width: 700px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
 }
