feat: add render little man

--- a/hangman/src/sass/components/_gallow.scss
+++ b/hangman/src/sass/components/_gallow.scss
@@ -14,6 +14,8 @@
 }
 
 .gallow__head {
+  display: none;
+
   position: absolute;
 
   right: 38px;
@@ -25,6 +27,8 @@
 }
 
 .gallow__body {
+  display: none;
+
   position: absolute;
 
   right: 60px;
@@ -36,6 +40,8 @@
 }
 
 .gallow__hand-one {
+  display: none;
+
   position: absolute;
 
   right: 65px;
@@ -47,6 +53,8 @@
 }
 
 .gallow__hand-two {
+  display: none;
+
   position: absolute;
 
   right: 27px;
@@ -58,6 +66,8 @@
 }
 
 .gallow__leg-one {
+  display: none;
+
   position: absolute;
 
   right: 65px;
@@ -69,6 +79,8 @@
 }
 
 .gallow__leg-two {
+  display: none;
+
   position: absolute;
 
   right: 27px;
