--- a/hangman/src/style.css
+++ b/hangman/src/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 .main {
   margin: 0 auto;
   max-width: 1440px;
@@ -137,6 +141,29 @@
 
 .info-block__answer {
   letter-spacing: 5px;
+}
+
+.popup {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(169, 169, 169, 0.5);
+  z-index: 1;
+}
+
+.popup__content {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 500px;
+}
+
+.popup__content-info {
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
