feat: add some styles

--- a/hangman/src/main.scss
+++ b/hangman/src/main.scss
@@ -12,3 +12,4 @@
 @import 'sass/components/keyboard';
 @import 'sass/components//info-block';
 @import 'sass/components/popup';
+@import 'sass/components/main-block';
