--- a/hangman/src/style.css
+++ b/hangman/src/style.css
@@ -5,6 +5,12 @@ body {
   align-items: center;
   height: 100vh;
   font-family: "Josefin Sans", sans-serif;
+  background: radial-gradient(circle, #e74c3c, #f39c12);
+}
+@media screen and (max-width: 700px) {
+  body {
+    display: block;
+  }
 }
 
 .main {
@@ -111,6 +117,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-self: flex-start;
+  justify-content: center;
   max-width: 550px;
 }
 @media screen and (max-width: 700px) {
@@ -169,6 +176,22 @@ body {
 
 .popup__content-info {
   text-align: center;
+}
+
+.main {
+  border: 20px solid rgb(132, 132, 209);
+  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+}
+@media screen and (max-width: 700px) {
+  .main {
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: radial-gradient(circle, #e74c3c, #f39c12);
+    border-radius: 0px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
