--- a/hangman/src/sass/components/_keyboard.scss
+++ b/hangman/src/sass/components/_keyboard.scss
@@ -24,6 +24,10 @@
   margin: 5px;
 
   text-align: center;
+
+  @media screen and (max-width: 700px) {
+    background-color: white;
+  }
 }
 
 .keyboard__key_active {
