--- a/hangman/src/main.scss
+++ b/hangman/src/main.scss
@@ -13,3 +13,4 @@
 @import 'sass/components//info-block';
 @import 'sass/components/popup';
 @import 'sass/components/main-block';
+@import 'sass/components/button';
