--- a/hangman/src/sass/components/_popup.scss
+++ b/hangman/src/sass/components/_popup.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 50px;
 
   width: 100%;
   height: 100%;
@@ -14,12 +15,17 @@
 }
 
 .popup__content {
+  border: 20px solid rgb(132, 132, 209);
+  padding: 10px;
   background-color: white;
+  border-radius: 10px;
+
+  width: 300px;
+  height: 200px;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
-
-  width: 500px;
 }
 
 .popup__content-info {
