--- a/hangman/src/style.css
+++ b/hangman/src/style.css
@@ -165,6 +165,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 50px;
   width: 100%;
   height: 100%;
   background-color: rgba(169, 169, 169, 0.5);
@@ -172,11 +173,15 @@ body {
 }
 
 .popup__content {
+  border: 20px solid rgb(132, 132, 209);
+  padding: 10px;
   background-color: white;
+  border-radius: 10px;
+  width: 300px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 500px;
 }
 
 .popup__content-info {
@@ -197,6 +202,10 @@ body {
     background: radial-gradient(circle, #e74c3c, #f39c12);
     border-radius: 0px;
   }
+}
+
+.button {
+  display: block;
 }
 
 /*# sourceMappingURL=style.css.map */
