feat: add different color for active button

--- a/hangman/src/sass/components/_keyboard.scss
+++ b/hangman/src/sass/components/_keyboard.scss
@@ -31,7 +31,7 @@
 }
 
 .keyboard__key_active {
-  background-color: yellow;
+  background-color: rgb(132, 132, 209);
 }
 
 .keyboard__key_disabled {
