--- a/hangman/src/sass/base/_base-styles.scss
+++ b/hangman/src/sass/base/_base-styles.scss
@@ -12,6 +12,6 @@ body {
   background: radial-gradient(circle, #e74c3c, #f39c12);
 
   @media screen and (max-width: 700px) {
-    display: block;
+    flex-direction: column;
   }
 }
