--- a/hangman/src/style.css
+++ b/hangman/src/style.css
@@ -9,7 +9,7 @@ body {
 }
 @media screen and (max-width: 700px) {
   body {
-    display: block;
+    flex-direction: column;
   }
 }
 
@@ -123,6 +123,7 @@ body {
 @media screen and (max-width: 700px) {
   .keyboard {
     order: 1;
+    margin: 0 auto;
   }
 }
 
