fix: fix design

--- a/hangman/src/sass/components/_info-block.scss
+++ b/hangman/src/sass/components/_info-block.scss
@@ -9,3 +9,9 @@
 .info-block__answer {
   letter-spacing: 5px;
 }
+
+.info-block__answer,
+.info-block__question,
+.info-block__counter {
+  text-align: center;
+}
