--- a/hangman/src/sass/base/_base-styles.scss
+++ b/hangman/src/sass/base/_base-styles.scss
@@ -1,11 +1,13 @@
 body {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100%;
 
   display: flex;
   justify-content: center;
   align-items: center;
-
-  height: 100vh;
 
   font-family: 'Josefin Sans', sans-serif;
 
@@ -13,7 +15,6 @@ body {
 
   @media screen and (max-width: 700px) {
     flex-direction: column;
-    height: auto;
     padding: 20px;
   }
 }
