--- a/hangman/src/sass/components/_popup.scss
+++ b/hangman/src/sass/components/_popup.scss
@@ -6,8 +6,8 @@
   align-items: center;
   gap: 50px;
 
+  height: 100vh;
   width: 100%;
-  height: 100%;
 
   background-color: rgba(169, 169, 169, 0.5);
 
