--- a/hangman/src/style.css
+++ b/hangman/src/style.css
@@ -1,16 +1,18 @@
 body {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   font-family: "Josefin Sans", sans-serif;
   background: radial-gradient(circle, #e74c3c, #f39c12);
 }
 @media screen and (max-width: 700px) {
   body {
     flex-direction: column;
-    height: auto;
     padding: 20px;
   }
 }
@@ -175,8 +177,8 @@ body {
   justify-content: center;
   align-items: center;
   gap: 50px;
+  height: 100vh;
   width: 100%;
-  height: 100%;
   background-color: rgba(169, 169, 169, 0.5);
   z-index: 1;
 }
