--- a/hangman/src/sass/base/_base-styles.scss
+++ b/hangman/src/sass/base/_base-styles.scss
@@ -2,7 +2,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  height: 100vh;
+  // height: 100vh;
   width: 100%;
 
   display: flex;
