--- a/hangman/src/style.css
+++ b/hangman/src/style.css
@@ -2,7 +2,6 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -143,6 +142,8 @@ body {
 @media screen and (max-width: 700px) {
   .keyboard__key {
     background-color: white;
+    width: 20px;
+    height: 20px;
   }
 }
 
