--- a/hangman/src/style.css
+++ b/hangman/src/style.css
@@ -2,6 +2,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
