feat: add base render of game field

--- a/nonograms/src/style.scss
+++ b/nonograms/src/style.scss
@@ -1,3 +1,5 @@
-.hello {
-  color: red;
-}
+// base
+@import "./sass/base/body";
+// layout
+@import "./sass/layout/table";
+@import "./sass/layout/wrapper";
