feat: add horizontal counting keys

--- a/nonograms/src/sass/layout/_table.scss
+++ b/nonograms/src/sass/layout/_table.scss
@@ -7,18 +7,25 @@
   height: 30px;
 }
 
-.table-nonograms td:nth-child(5n + 5) {
+.table-nonograms td:nth-child(5n + 6) {
   border-right-width: 4px;
 }
 
 .table-nonograms tr:nth-child(5n + 5) td {
   border-bottom-width: 4px;
 }
-
-.table-nonograms td:first-child {
+.table-nonograms td:nth-child(2) {
   border-left-width: 4px;
 }
 
 .table-nonograms tr:first-child td {
   border-top-width: 4px;
+}
+
+.table-nonograms__cell,
+.table-nonograms__left-keys-cell {
+  padding: 5px;
+}
+.table-nonograms__left-keys-cell {
+  display: flex;
 }
