--- a/nonograms/src/sass/layout/_table.scss
+++ b/nonograms/src/sass/layout/_table.scss
@@ -3,29 +3,27 @@
 }
 .table-nonograms td {
   border: 1px solid black;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
 }
 
 .table-nonograms td:nth-child(5n + 6) {
   border-right-width: 4px;
 }
 
-.table-nonograms tr:nth-child(5n + 5) td {
+.table-nonograms tr:nth-child(5n + 6) td {
   border-bottom-width: 4px;
 }
 .table-nonograms td:nth-child(2) {
   border-left-width: 4px;
 }
 
-.table-nonograms tr:first-child td {
+.table-nonograms tr:nth-child(2) td {
   border-top-width: 4px;
 }
 
-.table-nonograms__cell,
-.table-nonograms__left-keys-cell {
-  padding: 5px;
-}
-.table-nonograms__left-keys-cell {
-  display: flex;
+.table-nonograms__cell_keys-left {
+  padding-right: 5px;
+  letter-spacing: 5px;
+  text-align: right;
 }
