fix: remove styles from js

--- a/nonograms/src/sass/layout/_table.scss
+++ b/nonograms/src/sass/layout/_table.scss
@@ -27,3 +27,7 @@
   letter-spacing: 5px;
   text-align: right;
 }
+.table-nonograms__cell_keys-top span {
+  display: block;
+  text-align: center;
+}
