feat: add left click logic

--- a/nonograms/src/sass/layout/_table.scss
+++ b/nonograms/src/sass/layout/_table.scss
@@ -31,3 +31,12 @@
   display: block;
   text-align: center;
 }
+
+.table-nonograms__cell_answer {
+  background-color: black;
+  opacity: 0.5;
+}
+
+.table-nonograms_player-point {
+  background-color: red;
+}
