--- a/nonograms/src/sass/layout/_table.scss
+++ b/nonograms/src/sass/layout/_table.scss
@@ -7,6 +7,10 @@
   height: 50px;
 }
 
+.table-nonograms__cell {
+  position: relative;
+}
+
 .table-nonograms td:nth-child(5n + 6) {
   border-right-width: 4px;
 }
@@ -33,10 +37,16 @@
 }
 
 .table-nonograms__cell_answer {
-  background-color: black;
+  padding: 5px;
+  background-color: yellow;
   opacity: 0.5;
 }
 
 .table-nonograms_player-point {
   background-color: red;
+}
+
+.table-nonograms_player-cross {
+  background-image: url("./assets/svg/cross.svg");
+  background-repeat: no-repeat;
 }
