--- a/nonograms/src/style.scss
+++ b/nonograms/src/style.scss
@@ -4,3 +4,4 @@
 @import "./sass/layout/table";
 @import "./sass/layout/wrapper";
 @import "./sass/layout/name-nonogram";
+@import "./sass//layout/menu";
