feat: add function show answer

--- a/nonograms/src/sass/layout/_table.scss
+++ b/nonograms/src/sass/layout/_table.scss
@@ -37,8 +37,9 @@
   text-align: center;
 }
 
-.table-nonograms__cell_answer {
-  padding: 5px;
+// .table-nonograms__cell_answer {
+// }
+.table-nonograms__cell_answer_visible {
   background-color: yellow;
   opacity: 0.5;
 }
