feat: add base render without choosen lvl

--- a/nonograms/src/style.scss
+++ b/nonograms/src/style.scss
@@ -5,3 +5,4 @@
 @import "./sass/layout/wrapper";
 @import "./sass/layout/name-nonogram";
 @import "./sass//layout/menu";
+@import "./sass/layout/top-menu";
