fix: fix position top menu

--- a/nonograms/src/sass/layout/_top-menu.scss
+++ b/nonograms/src/sass/layout/_top-menu.scss
@@ -3,9 +3,11 @@
 }
 .top-menu-nonograms__lvl-block {
   display: flex;
+  justify-content: center;
   gap: 20px;
 }
 .top-menu-nonograms__choose-lvl {
   display: flex;
+  justify-content: center;
   gap: 5px;
 }
