--- a/nonograms/src/sass/layout/_table.scss
+++ b/nonograms/src/sass/layout/_table.scss
@@ -2,6 +2,15 @@
   grid-column: 1 / span 2;
 
   justify-self: center;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 500px;
+  height: 500px;
+
+  background-color: white;
 }
 .table-nonograms {
   border-collapse: collapse;
@@ -10,8 +19,8 @@
 .table-nonograms td,
 th {
   border: 1px solid black;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
 }
 
 .table-nonograms__cell {
