--- a/nonograms/src/sass/layout/_top-menu.scss
+++ b/nonograms/src/sass/layout/_top-menu.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   gap: 20px;
+  margin-bottom: 5px;
 }
 .top-menu-nonograms__choose-lvl {
   display: flex;
