feat: create basic win popup

--- a/nonograms/src/style.scss
+++ b/nonograms/src/style.scss
@@ -5,3 +5,5 @@
 @import "./sass/layout/wrapper";
 @import "./sass//layout/menu";
 @import "./sass/layout/top-menu";
+// componets
+@import "./sass/componets/win-popup";
