--- a/nonograms/src/style.scss
+++ b/nonograms/src/style.scss
@@ -5,5 +5,7 @@
 @import "./sass/layout/wrapper";
 @import "./sass//layout/menu";
 @import "./sass/layout/top-menu";
+@import "./sass/layout/timer";
 // componets
 @import "./sass/componets/win-popup";
+@import "./sass/componets/buttons";
