--- a/nonograms/src/sass/componets/_buttons.scss
+++ b/nonograms/src/sass/componets/_buttons.scss
@@ -1,15 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-
-  box-sizing: border-box;
-
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 button {
   display: block;
 
@@ -28,4 +16,8 @@ button {
 
 button:hover {
   background-color: aqua;
+}
+
+.button_active {
+  border: 1px solid black;
 }
