--- a/nonograms/src/sass/layout/_wrapper.scss
+++ b/nonograms/src/sass/layout/_wrapper.scss
@@ -1,8 +1,9 @@
 .wrapper-nonograms {
   display: grid;
-  grid-template-columns: 250px 250px 100px;
-  gap: 10px;
+  grid-template-columns: 350px 350px 100px;
   justify-content: center;
   align-content: center;
-  width: 1440px;
+  min-width: 700px;
+
+  border: 3px dotted black;
 }
