--- a/nonograms/src/sass/layout/_menu.scss
+++ b/nonograms/src/sass/layout/_menu.scss
@@ -9,4 +9,12 @@
   padding: 10px;
 
   border-left: 1px solid black;
+
+  @media screen and (max-width: 800px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    grid-row: 3;
+    grid-column: 1 / span 2;
+    border: none;
+  }
 }
