--- a/nonograms/src/sass/layout/_timer.scss
+++ b/nonograms/src/sass/layout/_timer.scss
@@ -4,4 +4,7 @@
 
   border-bottom: 1px solid black;
   border-left: 1px solid black;
+  @media screen and (max-width: 800px) {
+    padding: 55px;
+  }
 }
