--- a/nonograms/src/sass/layout/_wrapper.scss
+++ b/nonograms/src/sass/layout/_wrapper.scss
@@ -6,4 +6,9 @@
   min-width: 700px;
 
   border: 3px dotted black;
+
+  @media screen and (max-width: 800px) {
+    min-width: 480px;
+    grid-template-columns: 250px 250px;
+  }
 }
