feat: add working scoreboard

--- a/nonograms/src/sass/componets/_score-table.scss
+++ b/nonograms/src/sass/componets/_score-table.scss
@@ -1,13 +1,14 @@
 .score__table {
   border-collapse: collapse;
   width: 300px;
-  height: 200px;
+  height: auto;
 }
 .score__table th,
 .score__table td {
   border: 1px solid #dddddd;
   padding: 8px;
   text-align: left;
+  background-color: white;
 }
 .score__table th {
   background-color: #f2f2f2;
