feat: add close function for score popup

--- a/nonograms/src/style.scss
+++ b/nonograms/src/style.scss
@@ -10,3 +10,4 @@
 @import "./sass/componets/win-popup";
 @import "./sass/componets/buttons";
 @import "./sass//componets//score-table";
+@import "./sass/componets/score-popup";
