--- a/nonograms/src/sass/componets/_win-popup.scss
+++ b/nonograms/src/sass/componets/_win-popup.scss
@@ -17,6 +17,9 @@
 
   background-color: white;
   border: 1px dotted black;
+  border-radius: 10px;
+
+  padding: 10px;
 
   display: flex;
   flex-direction: column;
