--- a/nonograms/src/sass/layout/_wrapper.scss
+++ b/nonograms/src/sass/layout/_wrapper.scss
@@ -10,5 +10,6 @@
   @media screen and (max-width: 800px) {
     min-width: 480px;
     grid-template-columns: 250px 250px;
+    border: none;
   }
 }
