--- a/news-api/src/components/view/sources/sources.css
+++ b/news-api/src/components/view/sources/sources.css
@@ -1,10 +1,11 @@
 .sources {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   width: 100%;
-  height: 120px;
+  height: 70vh;
   overflow: auto;
   align-items: center;
+  justify-content: space-between;
   font:
     300 1em "Fira Sans",
     sans-serif;
@@ -13,6 +14,7 @@
 .source__item {
   background: none;
   border: 2px solid #30c5ff;
+  border-radius: 5px;
   font: inherit;
   line-height: 1;
   margin: 0.5em;
@@ -33,4 +35,10 @@
 .source__item-name {
   font-weight: 400;
   white-space: nowrap;
+}
+
+@media screen and (max-width: 600px) {
+  .sources {
+    display: block;
+  }
 }
