--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -1,5 +1,5 @@
-.game-container {
-  width: 500px;
-  height: 500px;
-  background-color: yellow;
+.game-container__puzzle {
+  display: block;
+  width: 300px;
+  height: 300px;
 }
