feat: add center position for background img

--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -3,4 +3,6 @@
   width: 400px;
   height: 400px;
   background-image: url('https://raw.githubusercontent.com/rolling-scopes-school/rss-puzzle-data/main/images/level1/9th_wave.jpg');
+  background-position: center;
+  background-size: cover;
 }
